update s3-adapter
